# cams-old

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cams.conf  cams.css  coverage.sh  run_tests.sh
src/: CMakeLists.txt
src/appli/: CMakeLists.txt  cams-cli.cpp  cams-gui.cpp
src/cli/: CMakeLists.txt
src/cli/arguments/: Arguments.cpp  Arguments.h  MissingArgumentException.cpp  MissingArgumentException.h  UnknownArgumentException.cpp  UnknownArgumentException.h
src/gui/: CMakeLists.txt
src/gui/cams-gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/gui/cams-gui/menu/: Menu.cpp  Menu.h  Menu.ui  User.cpp  User.h  User.ui
src/gui/components/: CustomLabeledInputPasswordField.cpp  CustomLabeledInputPasswordField.h  CustomLabeledInputPasswordField.ui  CustomLabeledInputTextField.cpp  CustomLabeledInputTextField.h  CustomLabeledInputTextField.ui  CustomNotificationWidget.cpp  CustomNotificationWidget.h  CustomNotificationWidget.ui  ValidationButton.cpp  ValidationButton.h
src/gui/connection/: ConnectionWidget.cpp  ConnectionWidget.h  ConnectionWidget.ui  CreateAccountWidget.cpp  CreateAccountWidget.h  CreateAccountWidget.ui
src/gui/controller/: MainWidgetController.cpp  MainWidgetController.h
src/gui/main/: DashboardItemsWidget.cpp  DashboardItemsWidget.h  DashboardItemsWidget.ui  DashboardWidget.cpp  DashboardWidget.h  DashboardWidget.ui  MainWidget.cpp  MainWidget.h  MainWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/gui/menu/: Menu.cpp  Menu.h  Menu.ui  UserMenuWidget.cpp  UserMenuWidget.h  UserMenuWidget.ui
src/gui/panels/stamps/: CreateStampWidget.cpp  CreateStampWidget.h  CreateStampWidget.ui
src/gui/tools/: FocusEventFilter.cpp  FocusEventFilter.h
src/lib/: CMakeLists.txt
src/lib/camscli/: Arguments.cpp  Arguments.h  MissingArgumentException.cpp  MissingArgumentException.h  UnknownArgumentException.cpp  UnknownArgumentException.h
src/lib/common/: base64.cpp  base64.h
src/lib/common/configuration/: Configuration.cpp  Configuration.h  INIFileParser.cpp  INIFileParser.h
src/lib/common/exception/: CamsException.cpp  CamsException.h  NotImplementedException.cpp  NotImplementedException.h  RefusedLoginException.cpp  RefusedLoginException.h
src/lib/common/factory/: BaseFactory.cpp  BaseFactory.h  BaseFactory.txx
src/lib/common/json/: JsonTools.cpp  JsonTools.h
src/lib/common/logger/: DefaultLogger.cpp  DefaultLogger.h  FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h  LoggerBase.cpp  LoggerBase.h  LoggerFactory.cpp  LoggerFactory.h
src/lib/connector/: ConnectorBase.cpp  ConnectorBase.h  ConnectorFactory.cpp  ConnectorFactory.h  ConnectorFile.cpp  ConnectorFile.h
src/lib/controller/: ControllerBase.cpp  ControllerBase.h  ControllerFactory.cpp  ControllerFactory.h  ControllerStamps.cpp  ControllerStamps.h  ControllerToken.cpp  ControllerToken.h  ControllerUsers.cpp  ControllerUsers.h  Identity.cpp  Identity.h  MissingIdentityException.cpp  MissingIdentityException.h  NotImplementedActionException.cpp  NotImplementedActionException.h  RefusedIdentityException.cpp  RefusedIdentityException.h  UnknownActionException.cpp  UnknownActionException.h  UnknownControllerException.cpp  UnknownControllerException.h
src/lib/model/core/: Attribute.cpp  Attribute.h  Attribute.txx  EntityBase.cpp  EntityBase.h
src/lib/model/stamps/: Stamp.cpp  Stamp.h
src/lib/model/users/: Identity.cpp  Identity.h  Token.cpp  Token.h  User.cpp  User.h
tests/: CMakeLists.txt
tests/code/: FixtureBase.h
tests/code/cli/arguments/: Arguments.cpp  FixtureArguments.h  MissingArgumentException.cpp  UnknownArgumentException.cpp
tests/code/lib/camscli/: Arguments.cpp  FixtureArguments.h  MissingArgumentException.cpp  UnknownArgumentException.cpp
tests/code/lib/common/: Logger.cpp  base64.cpp
tests/code/lib/common/configuration/: Configuration.cpp  FixtureConfiguration.h  FixtureINIFileParser.h  INIFileParser.cpp
tests/code/lib/common/exception/: CamsException.cpp  NotImplementedException.cpp  RefusedLoginException.cpp
tests/code/lib/common/factory/: BaseFactory.cpp
tests/code/lib/common/json/: FixtureJsonTools.h  JsonTools.cpp
tests/code/lib/common/logger/: DefaultLogger.cpp  FileLogger.cpp  FixtureDefaultLogger.h  FixtureFileLogger.h  FixtureLogger.h  FixtureLoggerBase.h  FixtureLoggerFactory.h  Logger.cpp  LoggerBase.cpp  LoggerFactory.cpp
tests/code/lib/connector/: ConnectorFactory.cpp  ConnectorFile.cpp  FixtureConnectorFactory.h  FixtureConnectorFile.h
tests/code/lib/controller/: ControllerBase.cpp  ControllerFactory.cpp  ControllerToken.cpp  ControllerUsers.cpp  FixtureControllerBase.h  FixtureControllerFactory.h  FixtureControllerToken.h  FixtureControllerUsers.h  MissingIdentityException.cpp  NotImplementedActionException.cpp  UnknownActionException.cpp  UnknownControllerException.cpp
tests/code/lib/model/core/: Attribute.cpp  EntityBase.cpp  FixtureEntityBase.h
tests/code/lib/model/users/: FixtureIdentity.h  FixtureToken.h  FixtureUser.h  Identity.cpp  User.cpp  (+1 more)
